whoops: update whoops development error handler fix  #3945